feat(auth): improve security by preventing account enumeration attacks when registering
/api/auth/register will always return 201 and instructions will be sent to the user's email address
